# pilota

./: .gitignore  CITATION.cff  Makefile  README.md  _typos.toml  package-lock.json  package.json  pyproject.toml  train.mk
.github/workflows/: ci.yml  typos.yml
docs/: format.md  plain2request.md  training.md  web_api.md
pilota/: cli.py  predict.py  schema.py  scorer.py  tokenize.py  train.py  util.py
pilota/const/: metachar.py
pilota/convert/: example2request.py  plain2request.py  scorer.py  split_example.py  vus2request.py  vus2table.py
pilota/evaluate/: calc.py  cli.py  cm.py  compare.py  compare_nbest.py  joint.py  schema.py  scorer.py
pilota/mull/: __init__.py  cli.py  mull.py  train.py
pilota/mull/pre/: dst_filter.py  ebextra.py  evaluate.py  jrte.py  make_yahoo.py  pilota.py  split.py  swap_txt.py
pilota/web/: cli.py  schema.py  util.py
pilota/web/static/: complement.json  index.html
pilota/web/static/static/: app.js  loader.css  style.css
tests/: test_main.py  test_temp.py
